kubernetes/shared/repos/oci/capacitor.yaml
---
---
apiVersion: v1
kind: Service
metadata:
  name: capacitor-service
  namespace: media
  labels:
    app.kubernetes.io/name: capacitor
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: capacitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP

---


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-route
  namespace: network
  labels:
    app.kubernetes.io/component: httproute
    app.kubernetes.io/instance: capacitor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: chart-template
    app.kubernetes.io/version: 1.0.0
    helm.toolkit.fluxcd.io/name: capacitor
    helm.toolkit.fluxcd.io/namespace: flux-system
  annotations:
    meta.helm.sh/release-name: capacitor
    meta.helm.sh/release-namespace: flux-system
spec:
  hostnames:
    - capacitor.sulibot.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: capacitor-service
          namespace: flux-system
          port: 80
          weight: 1
